--- a/config-yml/views.view.digital_issue_list.yml
+++ b/config-yml/views.view.digital_issue_list.yml
@@ -403,7 +403,7 @@ display:
           plugin_id: text
           empty: true
           content:
-            value: "<div class=\"alert alert-warning\">\r\n    <span class=\"fas fa-exclamation-circle\"></span>\r\n    No issues have been found for this title.\r\n</div>"
+            value: "<div class=\"alert alert-warning\">\r\n    <span class=\"fa-solid fa-exclamation-circle\"></span>\r\n    No issues have been found for this title.\r\n</div>"
             format: full_html
           tokenize: false
       sorts: {  }
@@ -1977,7 +1977,7 @@ display:
           plugin_id: text
           empty: true
           content:
-            value: "<div class=\"alert alert-warning\">\r\n    <span class=\"fas fa-exclamation-circle\"></span>\r\n    No issues have been found.\r\n</div>"
+            value: "<div class=\"alert alert-warning\">\r\n    <span class=\"fa-solid fa-exclamation-circle\"></span>\r\n    No issues have been found.\r\n</div>"
             format: full_html
           tokenize: false
       arguments:
@@ -2188,7 +2188,7 @@ display:
           admin_label: ''
           plugin_id: result
           empty: false
-          content: "<h2 class=\"alert alert-success\">\r\n    <span class=\"fas fa-check-circle\"></span>\r\n    Displaying @start - @end\r\n</h2>"
+          content: "<h2 class=\"alert alert-success\">\r\n    <span class=\"fa-solid fa-check-circle\"></span>\r\n    Displaying @start - @end\r\n</h2>"
       display_extenders: {  }
       block_description: ''
     cache_metadata:
