--- a/config-yml/views.view.digital_title_listing.yml
+++ b/config-yml/views.view.digital_title_listing.yml
@@ -264,7 +264,7 @@ display:
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
-          empty: '<small class="text-muted"><i class="fas fa-exclamation-triangle"></i> Undefined</small>'
+          empty: '<small class="text-muted"><span class="fa-solid fa-exclamation-triangle"></span> Undefined</small>'
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
@@ -314,7 +314,7 @@ display:
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
-          empty: '<small class="text-muted"><i class="fas fa-question-circle"></i> Unknown</small>'
+          empty: '<small class="text-muted"><span class="fa-solid fa-question-circle"></span> Unknown</small>'
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
@@ -378,7 +378,7 @@ display:
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
-          empty: '<small class="text-muted"><i class="fas fa-question-circle"></i> Unknown</small>'
+          empty: '<small class="text-muted"><span class="fa-solid fa-question-circle"></span> Unknown</small>'
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
@@ -446,7 +446,7 @@ display:
           plugin_id: text
           empty: true
           content:
-            value: "<div class=\"alert alert-warning\">\r\n    <span class=\"fas fa-exclamation-circle\"></span>\r\n    No results were found.\r\n</div>"
+            value: "<div class=\"alert alert-warning\">\r\n    <span class=\"fa-solid fa-exclamation-circle\"></span>\r\n    No results were found.\r\n</div>"
             format: full_html
           tokenize: false
       sorts: {  }
@@ -640,7 +640,7 @@ display:
           admin_label: ''
           plugin_id: text_custom
           empty: true
-          content: "<div class=\"alert border\">\r\n<strong>Note:</strong> Only a limited number of newspapers have been digitized to date and new content is being added on a continuing basis, including extending the runs existing titles.\r\n<a href=\"/project\" class=\"btn btn-link p-0 text-left\">More information about the New Brunswick Historical Newspapers Project <span class=\"fas fa-angle-double-right fa-sm\"></span></a>\r\n</div>"
+          content: "<div class=\"alert border\">\r\n<strong>Note:</strong> Only a limited number of newspapers have been digitized to date and new content is being added on a continuing basis, including extending the runs existing titles.\r\n<a href=\"/project\" class=\"btn btn-link p-0 text-left\">More information about the New Brunswick Historical Newspapers Project <span class=\"fa-solid fa-angle-double-right fa-sm\"></span></a>\r\n</div>"
           tokenize: false
         result:
           id: result
@@ -651,7 +651,7 @@ display:
           admin_label: ''
           plugin_id: result
           empty: false
-          content: '<h2 class="alert alert-success"><i class="fas fa-check-circle fa-sm mr-1"></i>Displaying @start - @end of @total results</h2>'
+          content: '<h2 class="alert alert-success"><span class="fa-solid fa-check-circle fa-sm mr-1"></span>Displaying @start - @end of @total results</h2>'
       footer: {  }
       display_extenders: {  }
     cache_metadata:
