--- a/config-yml/views.view.search.yml
+++ b/config-yml/views.view.search.yml
@@ -391,7 +391,7 @@ display:
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
-          empty: '<small class="text-muted"><i class="fas fa-exclamation-triangle"></i> Undefined</small>'
+          empty: '<small class="text-muted"><span class="fa-solid fa-exclamation-triangle"></span> Undefined</small>'
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
@@ -444,7 +444,7 @@ display:
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
-          empty: '<small class="text-muted"><i class="fas fa-question-circle"></i> Unknown</small>'
+          empty: '<small class="text-muted"><span class="fa-solid fa-question-circle"></span> Unknown</small>'
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
@@ -515,7 +515,7 @@ display:
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
-          empty: '<small class="text-muted"><i class="fas fa-question-circle"></i> Unknown</small>'
+          empty: '<small class="text-muted"><span class="fa-solid fa-question-circle"></span> Unknown</small>'
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
@@ -590,7 +590,7 @@ display:
           plugin_id: text
           empty: true
           content:
-            value: "<div class=\"alert alert-warning\">\r\n    <i class=\"fas fa-exclamation-circle\"></i>\r\n    No results were found.\r\n</div>"
+            value: "<div class=\"alert alert-warning\">\r\n    <span class=\"fa-solid fa-exclamation-circle\"></span>\r\n    No results were found.\r\n</div>"
             format: full_html
           tokenize: true
       sorts:
