IN-311 Move search sitemap settings from Custom Link to View

--- a/config-yml/views.view.search.yml
+++ b/config-yml/views.view.search.yml
@@ -832,8 +832,8 @@ display:
           variants:
             default:
               index: true
-              priority: '0.5'
-              changefreq: ''
+              priority: '1.0'
+              changefreq: weekly
               arguments: {  }
               max_links: 100
       path: search
