--- a/config-yml/views.settings.yml
+++ b/config-yml/views.settings.yml
@@ -9,6 +9,7 @@ ui:
   show:
     additional_queries: false
     advanced_column: false
+    default_display: false
     performance_statistics: true
     preview_information: true
     sql_query:
