--- a/config-yml/core.extension.yml
+++ b/config-yml/core.extension.yml
@@ -69,6 +69,7 @@ module:
   noreqnewpass: 0
   options: 0
   override_node_options: 0
+  owlcarousel: 0
   page_cache: 0
   path: 0
   path_alias: 0
