--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -2892,7 +2892,7 @@ display:
           admin_label: ''
           plugin_id: text_custom
           empty: true
-          content: "<div class=\"card collapse mt-2\" id=\"searchTips\">\r\n  <div class=\"card-body\">\r\n      <h2 class=\"card-title sr-only\">Search Term Guidelines</h2>\r\n      <div class=\"description m-0\">\r\n        <ul class=\"mb-0 px-3\">\r\n          <li>Use uppercase AND operator to limit to all terms used. eg. <code>cattle AND Fredericton</code></li>\r\n          <li>Use &quot;&quot; to do phrase searching. eg. <code>&quot;5000 pairs to select&quot;</code></li>\r\n          <li>After searching, use the facets to limit by date, publication and location</li>\r\n          <li>See current listing of\r\n            <a href=\"/digital-titles\">digitally available titles</a></li>\r\n        </ul>\r\n       </div>\r\n  </div>\r\n</div>"
+          content: "<div class=\"card collapse mt-2\" id=\"searchTips\">\r\n  <div class=\"card-body\">\r\n      <h2 class=\"card-title sr-only\">Search Term Guidelines</h2>\r\n      <div class=\"description m-0\">\r\n        <ul class=\"mb-0 px-3\">\r\n          <li>Use uppercase AND operator to limit to all terms used. eg. <code>cattle AND Fredericton</code></li>\r\n          <li>Use quotation marks to do phrase searching. eg. <code>&quot;5000 pairs to select&quot;</code></li>\r\n          <li>After searching, use the facets to limit by date, publication and location</li>\r\n          <li>See current listing of <a href=\"/digital-titles\">digitally available titles</a></li>\r\n        </ul>\r\n       </div>\r\n  </div>\r\n</div>"
           tokenize: false
         result:
           id: result
