--- a/config-yml/views.view.digital_titles_lister.yml
+++ b/config-yml/views.view.digital_titles_lister.yml
@@ -315,7 +315,7 @@ display:
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
-          empty: ''
+          empty: '<small class="text-muted">Unknown</small>'
           hide_empty: false
           empty_zero: false
           hide_alter_empty: false
@@ -381,7 +381,7 @@ display:
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
-          empty: '<small class="text-muted"><span class="fa-solid fa-question-circle"></span> Unknown</small>'
+          empty: '<small class="text-muted">Unknown</small>'
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
@@ -737,7 +737,7 @@ display:
           admin_label: ''
           plugin_id: text_custom
           empty: true
-          content: "<div class=\"alert border\">\r\n<strong>Note:</strong> This is the current listing of newspapers that have been digitized. New content is being continually added, including extending the runs of existing titles.\r\n<a href=\"/project\" class=\"btn btn-link p-0 text-left\"><span class=\"fa-solid fa-question-circle fa-sm\" aria-hidden=\"true\"></span> Learn more about the New Brunswick Historical Newspapers Project</a>\r\n</div>"
+          content: "<div class=\"alert border\">\r\n<strong>Note:</strong> This is the current listing of newspapers that have been digitized. New content is being continually added, including extending the runs of existing titles.\r\n<a href=\"/project\" class=\"btn btn-link p-0 text-left\">Learn more about the New Brunswick Historical Newspapers Project</a>\r\n</div>"
           tokenize: false
         result:
           id: result
