--- a/config-yml/views.view.search.yml
+++ b/config-yml/views.view.search.yml
@@ -444,7 +444,7 @@ display:
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
-          empty: '<small class="text-muted"><span class="fa-solid fa-question-circle"></span> Unknown</small>'
+          empty: '<small class="text-muted">Unknown</small>'
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
@@ -515,7 +515,7 @@ display:
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
-          empty: '<small class="text-muted"><span class="fa-solid fa-question-circle"></span> Unknown</small>'
+          empty: '<small class="text-muted">Unknown</small>'
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
@@ -662,7 +662,7 @@ display:
           expose:
             operator_id: search_api_fulltext_op
             label: Keywords
-            description: 'Search by title, location, publisher, notes, description or combination, i.e. Moncton 1932'
+            description: 'Search by title, location, publisher, notes, description or combination. i.e. Moncton 1932'
             use_operator: false
             operator: search_api_fulltext_op
             operator_limit_selection: false
