--- a/config-yml/views.view.digital_titles_lister.yml
+++ b/config-yml/views.view.digital_titles_lister.yml
@@ -315,7 +315,7 @@ display:
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
-          empty: '<small class="text-muted">Unknown</small>'
+          empty: '<span class="text-muted">Unknown</span>'
           hide_empty: false
           empty_zero: false
           hide_alter_empty: false
@@ -381,7 +381,7 @@ display:
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
-          empty: '<small class="text-muted">Unknown</small>'
+          empty: '<span class="text-muted">Unknown</span>'
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
