--- a/config-yml/views.view.search.yml
+++ b/config-yml/views.view.search.yml
@@ -444,7 +444,7 @@ display:
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
-          empty: '<small class="text-muted">Unknown</small>'
+          empty: '<span class="text-muted">Unknown</span>'
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
@@ -515,7 +515,7 @@ display:
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
-          empty: '<small class="text-muted">Unknown</small>'
+          empty: '<span class="text-muted">Unknown</span>'
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
