NBNP-275 Issue browse view: class/css adjustment

--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -1461,7 +1461,7 @@ display:
             preserve_tags: ''
             html: false
           element_type: div
-          element_class: 'text-center font-weight-bold'
+          element_class: issue-date
           element_label_type: ''
           element_label_class: ''
           element_label_colon: false
@@ -1638,7 +1638,7 @@ display:
             preserve_tags: ''
             html: false
           element_type: div
-          element_class: 'text-center issue-meta'
+          element_class: issue-meta
           element_label_type: ''
           element_label_class: ''
           element_label_colon: false
