--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -1981,7 +1981,7 @@ display:
     display_plugin: page
     position: 1
     display_options:
-      title: 'Search Fulltext in Pages'
+      title: 'Fulltext Search'
       fields:
         page_no:
           id: page_no
@@ -2759,7 +2759,7 @@ display:
       exposed_form:
         type: input_required
         options:
-          submit_button: 'Search Fulltext'
+          submit_button: 'Search in Pages'
           reset_button: false
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
@@ -2903,10 +2903,10 @@ display:
           field: area_text_custom
           relationship: none
           group_type: group
-          admin_label: ''
+          admin_label: 'Search Tips Card'
           plugin_id: text_custom
           empty: true
-          content: "<div class=\"card collapse mt-2\" id=\"searchTips\">\r\n  <div class=\"card-body\">\r\n      <h2 class=\"card-title sr-only\">Search Term Guidelines</h2>\r\n      <div class=\"description m-0\">\r\n        <ul class=\"mb-0 px-3\">\r\n          <li>Use uppercase AND operator to limit to all terms used. eg. <code>cattle AND Fredericton</code></li>\r\n          <li>Use quotation marks to do phrase searching. eg. <code>&quot;5000 pairs to select&quot;</code></li>\r\n          <li>After searching, use the facets to limit by date, publication and location</li>\r\n          <li>See current listing of <a href=\"/digital-titles\">digitally available titles</a></li>\r\n        </ul>\r\n       </div>\r\n  </div>\r\n</div>"
+          content: "<div class=\"card collapse mt-2\" id=\"searchTips\">\r\n  <div class=\"card-body\">\r\n      <h2 class=\"card-title sr-only\">Search Term Guidelines</h2>\r\n      <div class=\"description m-0\">\r\n        <ul class=\"mb-0 px-3\">\r\n          <li>Use uppercase AND operator to limit to all terms used. eg. <code>cattle AND Fredericton</code></li>\r\n          <li>Use quotation marks to do phrase searching. eg. <code>&quot;5000 pairs to select&quot;</code></li>\r\n          <li>After searching, use the facets to limit by date, publication and location</li>\r\n        </ul>\r\n       </div>\r\n  </div>\r\n</div>"
           tokenize: false
         result:
           id: result
