NBNP-391 Add exposed fulltext search block to digitized lister

--- a/config-yml/block.block.exposedformdigital_page_listerpage_search.yml
+++ b/config-yml/block.block.exposedformdigital_page_listerpage_search.yml
@@ -26,4 +26,4 @@ visibility:
     id: request_path
     negate: false
     context_mapping: {  }
-    pages: '/page-search*'
+    pages: "/page-search*\r\n/digital-titles"
