--- a/config-yml/fontawesome.settings.yml
+++ b/config-yml/fontawesome.settings.yml
@@ -4,9 +4,9 @@ tag: span
 method: webfonts
 load_assets: true
 use_cdn: false
-external_svg_location: 'https://use.fontawesome.com/releases/v5.13.1/css/all.css'
+external_svg_location: 'https://use.fontawesome.com/releases/v6.5.1/js/all.js'
 use_shim: false
-external_shim_location: 'https://use.fontawesome.com/releases/v5.13.1/js/v4-shims.js'
+external_shim_location: 'https://use.fontawesome.com/releases/v6.5.1/js/v4-shims.js'
 allow_pseudo_elements: true
 use_solid_file: true
 use_regular_file: false
