NBNP-417 Rename citation library->copy_citation

--- a/custom/modules/newspapers_core/newspapers_core.libraries.yml
+++ b/custom/modules/newspapers_core/newspapers_core.libraries.yml
@@ -1,3 +1,11 @@
+copy_citation:
+  js:
+    js/newspapers_core.copy_citation.js: {}
+  dependencies:
+    - core/drupal
+    - core/jquery
+    - clipboardjs/clipboardjs
+
 claro-overrides:
   css:
     theme:
