--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -2720,7 +2720,7 @@ display:
             preserve_tags: ''
             html: false
           element_type: div
-          element_class: text-muted
+          element_class: excerpt
           element_label_type: ''
           element_label_class: ''
           element_label_colon: false
