--- a/config-yml/views.view.this_day_in_nb_history.yml
+++ b/config-yml/views.view.this_day_in_nb_history.yml
@@ -38,7 +38,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<h2>This Day in New Brunswick History</h2>'
+            text: 'This Day in New Brunswick History'
             make_link: false
             path: ''
             absolute: false
@@ -63,14 +63,14 @@ display:
             trim: false
             preserve_tags: ''
             html: false
-          element_type: ''
+          element_type: h2
           element_class: ''
           element_label_type: ''
           element_label_class: ''
           element_label_colon: false
-          element_wrapper_type: ''
+          element_wrapper_type: '0'
           element_wrapper_class: ''
-          element_default_classes: true
+          element_default_classes: false
           empty: ''
           hide_empty: false
           empty_zero: false
