--- a/config-yml/views.view.search.yml
+++ b/config-yml/views.view.search.yml
@@ -794,7 +794,7 @@ display:
           admin_label: ''
           plugin_id: result
           empty: false
-          content: '<h2 class="alert alert-success">Displaying @start - @end of @total results</h2>'
+          content: '<h2>Displaying @start - @end of @total results</h2>'
       footer: {  }
       display_extenders: {  }
     cache_metadata:
