NBNP-443 Switch Featured tab focus: img -> a

--- a/config-yml/core.entity_view_display.node.publication.featured.yml
+++ b/config-yml/core.entity_view_display.node.publication.featured.yml
@@ -172,7 +172,7 @@ content:
     type: image
     label: hidden
     settings:
-      image_link: content
+      image_link: ''
       image_style: sample_publication_image
       image_loading:
         attribute: lazy
