NBNP-443 This Day in History: add aria-label+revise tooltip

--- a/config-yml/views.view.this_day_in_nb_history.yml
+++ b/config-yml/views.view.this_day_in_nb_history.yml
@@ -419,7 +419,7 @@ display:
           exclude: true
           alter:
             alter_text: true
-            text: "<a href=\"/serials/{{ parent_digital_title_id }}/issues/{{ arguments.parent_digital_issue_id }}/pages/{{ id }}\"\r\ndata-toggle=\"tooltip\"\r\ntitle=\"Browse our scan for the {{ issue_date }} issue of {{ parent_publication_title }}\">{{ page_image }}</a>"
+            text: "<a href=\"/serials/{{ parent_digital_title_id }}/issues/{{ arguments.parent_digital_issue_id }}/pages/{{ id }}\"\r\naria-label=\"Our scan for the {{ issue_date }} issue of {{ parent_publication_title }}\"\r\ndata-toggle=\"tooltip\" title=\"Browse this digital issue\">{{ page_image }}</a>"
             make_link: false
             path: '/serials/{{ parent_digital_title_id }}/issues/{{ arguments.parent_digital_issue_id }}/pages/{{ parent_digital_page_id }}'
             absolute: false
