NBNP-445 Add 'Arabic' at the field level, not custom

--- a/config-yml/languagefield.custom_language.micmac.yml
+++ b/config-yml/languagefield.custom_language.micmac.yml
@@ -5,5 +5,5 @@ dependencies: {  }
 id: micmac
 label: Mi’kmaq/Mi’kmaw/Micmac
 direction: ltr
-weight: null
+weight: -10
 native_name: Mi’kmaq/Mi’kmaw/Micmac
