--- a/config-yml/search_api.index.solr_newspapers_lib_unb_ca.yml
+++ b/config-yml/search_api.index.solr_newspapers_lib_unb_ca.yml
@@ -27,8 +27,8 @@ dependencies:
     - search_api.server.solr_newspapers_lib_unb_ca
   module:
     - search_api_solr
-    - taxonomy
     - node
+    - taxonomy
     - search_api
     - newspapers_core
 third_party_settings:
@@ -92,6 +92,14 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_place_of_publication
+  changed:
+    label: 'Last Saved'
+    datasource_id: 'entity:node'
+    property_path: changed
+    type: date
+    dependencies:
+      module:
+        - node
   country_name:
     label: 'Country (Fulltext)'
     datasource_id: 'entity:node'
@@ -388,6 +396,7 @@ processor_settings:
   content_access:
     weights:
       preprocess_query: -30
+  custom_value: {  }
   entity_type: {  }
   highlight:
     weights:
