--- a/config-yml/views.view.search.yml
+++ b/config-yml/views.view.search.yml
@@ -607,6 +607,19 @@ display:
             label: ''
             field_identifier: search_api_relevance
           exposed: false
+        changed:
+          id: changed
+          table: search_api_index_solr_newspapers_lib_unb_ca
+          field: changed
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: search_api
+          order: DESC
+          expose:
+            label: ''
+            field_identifier: ''
+          exposed: false
       arguments: {  }
       filters:
         status:
